--- a/literatura.bib
+++ b/literatura.bib
@@ -59,13 +59,29 @@ title = {Top 10 Project},
 howpublished = {\url{https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project}},
 }
 
+@Book{CRYP,
+author = {Barbara Guttman and Edward A. Roback},
+title = {An Introduction to Computer Security: The NIST Handbook},
+publisher = {National Institute of Standards and Technology},
+year = {1995},
+}
+
 @Misc{Sanit,
 key = {Sanit},
 title = {Validating Sanitizing and Escaping User Data},
 howpublished = {\url{https://codex.wordpress.org/Validating_Sanitizing_and_Escaping_User_Data}},
 }
 
+@Misc{DoS,
+key = {DoS},
+title = {Denial of Service (DoS) Attacks},
+howpublished = {\url{http://www.webopedia.com/DidYouKnow/Internet/DoS_attack.asp}},
+}
 
-
-
+@Misc{DoSM,
+key = {DoSM},
+author = {Malkov Saša},
+title = {Bezbednost Veb Aplikacija},
+howpublished = {\url{http://poincare.matf.bg.ac.rs/~smalkov/files/pveb.r338.2016/public/predavanja/PVeb.2014.08%20-%20bezbednost.pdf}},
+}
 
