--- a/NaslovKovacevicIvicKovacevic.tex
+++ b/NaslovKovacevicIvicKovacevic.tex
@@ -25,14 +25,13 @@
 
 \begin{document}
 
-\title{Propusti u bezbednosti veb aplikacija i prevencija njihove zloupotrebe\\ \small{Seminarski rad u okviru kursa\\Metodologija stručnog i naučnog rada\\ Matematički fakultet}}
+\title{\vspace{-5ex}Propusti u bezbednosti veb aplikacija i prevencija njihove zloupotrebe\\ \small{Seminarski rad u okviru kursa\\Metodologija stručnog i naučnog rada\\ Matematički fakultet}}
 
 \author{Aleksandra Kovačević, David Ivić, Sreten Kovačević\\ mi13302@matf.bg.ac.rs, 310ddavi@gmail.com, mi13097@matf.bg.ac.rs}
-\date{26.~mart 2015.}
 
 \maketitle
 
-\abstract{Ovaj rad pruža osnovne informacije o bezbednosti softvera, posledicama koje nastaju usled njenog zanemarivanja i načinima prevencije njenih zloupotreba. Takođe, prikazana je i potreba za adekvatnom bezbednošću celog sistema, a ne samo aplikacija. Kroz primere su, na praktičan način, prikazani razlozi i preporuke za implementaciju bezbednog softvera.}
+\abstract{Ovaj rad pruža osnovne informacije o bezbednosti softvera, posledicama koje nastaju usled njenog zanemarivanja i načinima prevencije njenih zloupotreba. Akcenat će biti na bezbednosti veb aplikacija. Takođe, prikazana je i potreba za adekvatnom bezbednošću celog sistema, a ne samo aplikacija. Kroz primere su, na praktičan način, prikazani razlozi i preporuke za implementaciju bezbednog softvera.}
 
 \tableofcontents
 
@@ -50,7 +49,7 @@ Prelaskom na odeljak \ref{server}, sa problema bezbednosti aplikacija preći će
 
 Bezbednost softvera je ideja pri konstruisanju softvera, koja podrazumeva da on nastavi da funkcioniše ispravno čak i pri zlonamernim napadima.
 
-Najbolja praksa pri razvoju bezbednog softvera uključuje razmišljanje o sigurnosti u ranim fazama životnog ciklusa softvera, razumevajući uobičajene pretnje (uključujući i mane programskog jezika), podvrgavajući sve softverske nepravilnosti temeljnoj i objektivnoj analizi rizika i testiranju. Dok softveri koji se razvijaju skoro uvek imaju greške pri implementaciji, utvrđeno je da je sigurnost mnogih sistema narušena zbog mana u dizajnu softverskog rešenja.
+Najbolja praksa pri razvoju bezbednog softvera uključuje razmišljanje o sigurnosti u ranim fazama životnog ciklusa softvera, razumevajući uobičajene pretnje (uključujući i mane programskog jezika), podvrgavajući sve softverske nepravilnosti temeljnoj i objektivnoj analizi rizika i testiranju. Dok softveri koji se razvijaju uglavnom imaju greške pri implementaciji, utvrđeno je da je sigurnost mnogih sistema narušena zbog mana u dizajnu softverskog rešenja.
 
 U nastavku ćemo govoriti o osnovnim principima dizajna bezbednog softvera. Kako je ova oblast prilično široka, pomenućemo samo one najvažnije. Fokus će biti na veb aplikacijama. Bitno je napomenuti da neće biti reči o operativnim sistemima, antivirusnoj zaštiti i zaštitnom zidu, koji su bitni aspekti bezbednosti sistema, ali nisu direktno vezani za dizajn softvera.
 
@@ -59,12 +58,21 @@ Jedan od ciljeva sigurnosnog dizajna softvera je da se spreči entitet (korisnik
 
 Osnovni predmeti ugrožavanja su poverljivost (sposobnost da se sopstveni podaci zaštite od neovlašćenog pristupa), integritet (sposobnost da se spreči neovlašćeno ili nepoželjno menjanje podataka) i raspoloživost informacija (sposobnost da se pristupa podacima kada su potrebni).\cite{BIS}
 
-Kontrola pristupa se ostvaruje u tri koraka.
+Kontrola pristupa se ostvaruje u tri koraka:
 \begin{itemize}
 	\item Identifikacija
 	\item Autentikacija
 	\item Autorizacija
-\end{itemize} 
+\end{itemize}
+Na slici \ref{slika1} možemo videti redosled primene koraka kontrole pristupa prilikom pristupanja osetljivom resursu.
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[scale=0.4]{koraci}
+\caption{Koraci prilikom pristupanja osetljivom resursu}
+\label{slika1}
+\end{center}
+\end{figure}
 
 \subsubsection{Identifikacija}
 Identifikacija je pretpostavljanje identiteta subjekta. Uobičajeno se odvija na osnovu korisničkog imena, broja računa, ID kartice. Uglavnom nije jedinstvena i sama za sebe predstavlja veoma slab koncept.
@@ -102,7 +110,7 @@ i onda odlazi, pritom zaboravljajući da se odjavi. Ispravno dizajniran sistem z
 \subsubsection{Autorizacija}
 Autorizacija predstavlja mehanizam provere prava specifičnog subjekta.
 Samo znanje korisnikovog identiteta može biti nedovoljno za izvršavanje određene operacije, već je neophodno znati koje su njegove privilegije.
-Na primer, kada ATM mašina autentikuje korisnika putem fizičkog faktora (bankovna kartica) i memorijskog faktora (PIN kod),
+Na primer, kada ATM (eng.~{\em Automated Teller Machine}\footnote{Bankomat}) mašina autentikuje korisnika putem fizičkog faktora (bankovna kartica) i memorijskog faktora (PIN kod),
 to ne znači da je tom korisniku dozvoljeno da podigne proizvoljnu sumu novca sa svog računa. Većina korisnika je autorizovana 
 da podigne sumu novca do neke određene dnevne granice, ili da izvršava neke određene operacije (upit stanja), 
 ali ne i druge (prenos novca van banke) sa ATM-a.
@@ -142,17 +150,19 @@ Ukoliko se ne pridržavamo ovih principa može doći do pojave mnogih sigurnosni
 
 \section{Bezbednost veb aplikacija} \label{aplikacije}
 
-Sa pojavom Veb 2.0, povećanjem deljenja informacija preko socijalnih mreža i korišćenjem veba kao sredstva poslovanja i pružanja različitih informacija, bezbednost sajtova često biva ugrožena upadima od strane zlonamernih programera.
+Sa pojavom Veb 2.0, povećanjem deljenja informacija preko socijalnih mreža i korišćenjem veba kao sredstva poslovanja i pružanja različitih informacija, bezbednost sajtova često biva ugrožena upadima od strane zlonamernih korisnika.
 
-Zlonamerni programeri (u daljem tekstu hakeri) ili nastoje da kompromituju korporativnu mrežu ili navode krajnje korisnike koji joj pristupaju ka preuzimanju sadržaja čijeg rizika nisu svesni (zlonamerni programi-virusi). Kao rezultat toga, industrija obraća veliku pažnju na bezbednost samih veb aplikacija, pored bezbednosti osnovne računarske mreže i operativnih sistema.
+Zlonamerni korisnici (u daljem tekstu hakeri\footnote{Pojam haker sugeriše na stručnjaka iz oblasti računarskih nauka koji ima kapacitete da rešava probleme sa kojima se suočava. Vremenom, reč haker postala je sinonim za ljude koji koriste nedostatke u programu kako bi upali u računarski sistem.}) ili nastoje da kompromituju korporativnu mrežu ili navode krajnje korisnike koji joj pristupaju ka preuzimanju sadržaja čijeg rizika nisu svesni (zlonamerni programi, odnosno virusi). Kao rezultat toga, industrija obraća veliku pažnju na bezbednost samih veb aplikacija, pored bezbednosti osnovne računarske mreže i operativnih sistema.
 
 Bezbednost veba je grana bezbednosti informacija koja se bavi bezbednošću veb sajtova, veb aplikacija i veb servera. Bezbednost veb aplikacija se oslanja na principe bezbednosti aplikacija uopšte, ali ih primenjuje specifično za Internet i veb sisteme.
 Bezbednost veb servera je zaštita informacija dostupnih preko veb servera. Te informacije se mogu ugroziti povećanim sigurnosnim rizicima i propustima prilikom implementacije.
 
 \subsection{Sigurnosni rizici}
 
-Najveći sigurnosni rizici potiču iz nerazumevanja sposobnosti hakera. Kada se razmišlja o zaštiti veb aplikacije, ne sme se voditi mišlju: sve što je prikazano, biva naše ograničenje onoga što možemo da učinimo. Sve što predstavlja klijentsku stranu, i ograničenja koja su pomoću nje nametnuta, se veoma lako mogu zaobići.
-\textbf{Pretraživač ne predstavlja ograničenje }.\\
+Najveći sigurnosni rizici potiču iz nerazumevanja sposobnosti hakera. Kada se razmišlja o zaštiti veb aplikacije, ne sme se voditi mišlju: sve što je prikazano, biva naše ograničenje onoga što možemo da učinimo. Sve što predstavlja klijentsku stranu i ograničenja koja su pomoću nje nametnuta, mogu se veoma lako zaobići.
+
+Pretraživač ne predstavlja ograničenje. Ne smemo se oslanjati na to da korisnik neće sam uneti parametre koje želi, već treba i na nivou aplikacije da ograničimo prava pristupa.
+
 U okrviru ovog rada, razmatraćemo tri najinteresantnije vrste napada iz ugla zloupotrebe propusta u dizajnu aplikacija:
 \begin{enumerate}
 	\item Umetanje skriptova (eng.~{\em Cross-Site Scripting})
@@ -160,11 +170,11 @@ U okrviru ovog rada, razmatraćemo tri najinteresantnije vrste napada iz ugla zl
 	\item Kontrola pristupa (eng.~{\em Access control})
 \end{enumerate}
 \subsection{Umetanje skriptova (XSS)}
-\textbf{Umetanje skriptova}, poznatiji kao \textbf{XSS}\cite{XSS}, je napad umetanjem(eng.~{\em \\injection}) kodova u sajt. Takođe je jedan od najuobičajenijih načina napada, jer svaki sajt zahteva od korisničkog pretraživača podršku javascript-a.\\
-\textbf{Problem:} Korisnik je u situaciji da pošalje neki vid odgovora stranici (searchbox), a ako taj odgovor sadrži neke HTML tagove ili javascript kod, stranica ih renderuje i izvršava kod.\\
+\textbf{Umetanje skriptova}, poznatiji kao \textbf{XSS} \cite{XSS}, je napad umetanjem(eng.~{\em \\injection}) kodova u sajt. Takođe je jedan od najuobičajenijih načina napada, jer svaki sajt zahteva od korisničkog pretraživača podršku Javascript-a.\\
+\textbf{Problem:} Korisnik je u situaciji da pošalje neki vid odgovora stranici (searchbox), a ako taj odgovor sadrži neke HTML tagove ili Javascript kod, stranica ih renderuje i izvršava kod.\\
 \textbf{Posledice:}
 \begin{enumerate}
-	\item krađa ID-a sesije i sasim tim krađa korisnikovog identiteta (u cilju obavljanja poslova u ime tog korisnika)
+	\item krađa ID-a sesije i samim tim krađa korisnikovog identiteta (u cilju obavljanja poslova u ime tog korisnika)
 	\item kontrola stranice (blokiranje rada, menjanje pojedinačnih elemenata...)
 	\item redirekcija na drugu, zlonamernu stranicu
 \end{enumerate}
@@ -172,18 +182,16 @@ U nastavku videćemo različite vrste napada tipa XSS.
 
 \subsubsection{Refleksivni XSS}
 
-Refleksivni XSS napad se zasniva na umetanju izvršnog koda u HTTP odgovor. Sam kod nije sačuvan u okviru aplikacije, već (u naivnim primerima) može biti vidljiv u okviru nadograđenog URL-a (eng.~{\em Uniform Resource Locator}), kao posledica HTTP odgovora.
+Refleksivni XSS (eng.~{\em Reflected XSS}) napad se zasniva na umetanju izvršnog koda u HTTP odgovor. Sam kod nije sačuvan u okviru aplikacije, već (u naivnim primerima) može biti vidljiv u okviru nadograđenog URL-a (eng.~{\em Uniform Resource Locator}), kao posledica HTTP odgovora.
 \begin{primer}
 \label{primer1}
-Pretpostavimo da imamo jednostavan sajt, čija je uloga da ima jedan searchbox i dugme 'pretraga' (sadržaj onoga što pretražujemo nije bitan za ovaj napad)
+Pretpostavimo da imamo jednostavan sajt, čija je uloga da ima jedno polje za unos i dugme 'pretraga' (sadržaj onoga što pretražujemo nije bitan za ovaj napad)
 \begin{enumerate}
 \item nakon bilo kakve pretrage, promeniće nam se URL: 
-\begin{lstlisting}
-www.sajt.com?key="pretrazujemo"
-\end{lstlisting}
+\texttt{www.sajt.com?key="pretrazujemo"}
 \item izmenom sadržaja sekcije 'key', možemo da ubacimo neki skript
 
-\begin{lstlisting}
+\begin{lstlisting}[language=HTML]
 <script>alert("123")</script>
 \end{lstlisting}
 
@@ -200,9 +208,9 @@ Način prikrivanja ovakvih napada (jer korisnik može da nasluti iz URL-a da je 
 
 Suprotno Refleksivnom XSS-u koji ne ostavlja tragove na samoj aplikaciji, odnosno unutar njenog koda je sačuvani XSS (eng.~{\em Stored XSS}).\\ Cilj sačuvanog XSS-a je da sakrije svoju zlonamernost tako što je javan. Najprostiji primer jeste da u okviru napadnute aplikacije, haker ostavi link ka zlonamernoj stranici i čeka se na korisnika (bilo kog koji nailazi na taj sajt) klikne na njega.
 
-\subsubsection{XSS-prevencija}
+\subsubsection{XSS - prevencija}
 
-Fokus u sprečavanju XSS\cite{XSS_prev} napada se oslanja na problem to što pretraživač renderuje HTML tagove i izvršava javascript kod.  
+Fokus u sprečavanju XSS \cite{XSS_prev} napada se oslanja na problem toga što pretraživač renderuje HTML tagove i izvršava Javascript kod.  
 
 Rešenje je da pretraživač uradi enkodiranje na izlazu. Svaki karakter se enkoduje kao što je i prikazano na tabeli \ref{kodiranje}.
 
@@ -236,7 +244,7 @@ Rezultat ovoga je prikaz bezopasne renderovane HTML stranice (premda je problem 
 
 \subsection{Umetanje SQL upita}
 
-\textbf{Umetanje SQL upita}(eng.~{\em SQL injection})\cite{SQL} predstavlja još jedan vid napada umetanje kodova (tačnije upita) u sajt, ali ovaj put, glavna meta je baza podataka koju koristi server.\\
+\textbf{Umetanje SQL upita}(eng.~{\em SQL injection}) \cite{SQL} predstavlja još jedan vid napada umetanje kodova (tačnije upita) u sajt, ali ovaj put, glavna meta je baza podataka koju koristi server.\\
 \textbf{Problem:} Podaci se šalju od strane korisnika, a sistem ne rukuje sa njima na pravilan način.\\
 \textbf{Posledice:} 
 \begin{enumerate}
@@ -244,74 +252,74 @@ Rezultat ovoga je prikaz bezopasne renderovane HTML stranice (premda je problem 
 	\item modifikovanje baze izvršavanjem upita (brisanje podataka, menjanje...)
 \end{enumerate}
 
-\subsubsection{Umetanje SQL upita-primena}
+\subsubsection{Umetanje SQL upita - primena}
 
-Umetanje SQL upita se može vršiti u bilo kom delu aplikacije koja u pozadini izvršava neki upit (najčešće je to deo za \textit{Log in}, pretraga u okviru sajta, učitavanje podataka iz spoljašnjih izvora itd.). U primeru \ref{primer2} možemo videti napad u fazi prijavljivanja korisnika. Ovo je uprošćen primer, ali svi komplikovaniji se zasnivaju na istoj ideji.
+Umetanje SQL upita se može vršiti u bilo kom delu aplikacije koja u pozadini izvršava neki upit (najčešće je to deo za prijavljivanje (eng.~{\em Log In}), pretraga u okviru sajta, učitavanje podataka iz spoljašnjih izvora itd.). U primeru \ref{primer2} možemo videti napad u fazi prijavljivanja korisnika. Ovo je uprošćen primer, ali svi komplikovaniji se zasnivaju na istoj ideji.
 \begin{primer}
 \label{primer2}
 Pretpostavimo da imamo stranicu, koja nakon uspešnog prijavljivanja ispisuje informacije o korisniku (njegovo korisničko ime i lozinku, neke informacije o njemu itd.). Ukoliko su korisnički parametri uneti kao:\\
 - IME: \say{Marko}\\
 - LOZINKA: \say{passw0rd}\\
 Upit nakon uvrštavanja parametara izgleda:
-\begin{lstlisting}
- SELECT * 
- FROM baza 
- WHERE username='Marko'
- 	AND password='passw0rd'
+
+\begin{lstlisting}[language=SQL]
+SELECT * 
+FROM baza 
+WHERE username='Marko' AND password='passw0rd'
 \end{lstlisting}
 Uneto ime i lozinka predstavljaju parametre za izvršavanje ovog upita.\\\\
 Ako bismo u polje za korisničko ime uneli sledeće:\\
 - IME: \say{ hi' OR '1'='1 }\\
 - LOZINKA: \say{ hi' OR '1'='1 }\\
 Upit bi izgledao sada ovako nakon uvrštavanja parametara:
-\begin{lstlisting}
+
+\begin{lstlisting}[language=SQL]
 SELECT * 
 FROM baza 
 WHERE username='hi' OR '1'='1' 
 	AND password='hi' OR '1'='1'
 \end{lstlisting}
-Primetimo je izraz \say{1=1} uvek tačan pa je deo za korisničko ime i lozinku krajnje irelevantan.\\
+
+Primetimo da je izraz \say{1=1} uvek tačan pa je deo za korisničko ime i lozinku krajnje irelevantan.\\
 Sistem će prijaviti korisnika (najčesće) sa kredencijalima korisnika koji se nalazi na prvom mestu spiska korisnika iz baze.\\
 \end{primer}
 
-\subsubsection{Umetanje SQL upita-prevencija}
+\subsubsection{Umetanje SQL upita - prevencija}
 
-Solucija koja se nameće za umetanje SQL upita, jeste da sistem pravilno proverava stringove koji su uneti kao korisničko ime ili lozinka (konkretno u našem primeru). Glavni problem i jeste u korišćenju specijalnih karaktera (kao što su = ili ' itd.)\cite{SQL_prev}, te treba navesti sistem da ih ignoriše.\cite{Sanit}\\
+Solucija koja se nameće za umetanje SQL upita, jeste da sistem pravilno proverava stringove koji su uneti kao korisničko ime ili lozinka (konkretno u našem primeru). Glavni problem i jeste u korišćenju specijalnih karaktera (kao što su = ili ' itd.) \cite{SQL_prev}, te treba navesti sistem da ih ignoriše.\cite{Sanit}\\
 Takođe postoje i softveri namenjeni proveri \say{ranjivosti} veb aplikacije od napada umetanjem, uz predloge dodatne zaštite.
 
 \subsection{Kontrola pristupa}
 
-Kontrola pristupa\cite{AC} predstavlja filtriranje onoga šta korisnik može da vidi ili sa kojim podacima može da radi,  u zavisnosti od toga koja prava poseduje. Cilj hakera je pristupanje, menjanje nečega za šta ne poseduju prava.\\
+\textbf{Kontrola pristupa} \cite{AC} predstavlja filtriranje onoga šta korisnik može da vidi ili sa kojim podacima može da radi,  u zavisnosti od toga koja prava poseduje. Cilj hakera je pristupanje, menjanje nečega za šta ne poseduju prava.\\
 \textbf{Problem:} Razvijaoci pretpostavljaju da, ako nešto nije vidljivo korisniku, on ne može da mu pristupi.\\
 \textbf{Posledica:} Neovlašćen pristup podacima ili funkcionalnostima.
 
-\subsubsection{Kontrola pristupa-primena}
+\subsubsection{Kontrola pristupa - primena}
 
 Direktno referisanje objekata (eng.~{\em Direct Object References}) predstavlja osnovni način zloupotrebe prava pristupa i svodi se na direktno menjanje parametara URL-a.
 \begin{primer}
 \label{primer3}
-Pretpostavimo da imamo sajt banke kod koje imamo otvoren račun i nalog na njemu. Nakon uspešnog prijavljivanja, URL u našem pretraživaču će da izgleda ovako:
-\begin{lstlisting}
-http://banka.com/nalog?id=123
-\end{lstlisting}
+Pretpostavimo da imamo sajt banke kod koje imamo otvoren račun i nalog na njemu. Nakon uspešnog prijavljivanja, url u našem pretraživaču izgledaće ovako:
+
+\texttt{http://banka.com/nalog?id=123}\\
 Gde je \say{123} naša reprezentacija sajtu banke. Jednostavnom izmenom \say{123} na npr. \say{124} možemo dobiti pregled drugog korisničkog naloga (najopasnija promena bi bila sa \say{123} na \say{1} jer je to najčešće id admina sa svim pravima pristupa).
 \end{primer}
+
 Osim pregledanja tuđeg naloga, moguće je i korišćenje funkcionalnosti za koja nemamo prava, što pokazuje naredni primer.
+
 \begin{primer}
 \label{primer4}
-Pretpostavimo da imamo još i dugme za izmenu profila. Klikom na njega, URL će izgledati ovako:\\
+Pretpostavimo da imamo još i dugme za izmenu profila. Klikom na njega, url će izgledati ovako:
 
-\begin{lstlisting}
-http://banka.com/nalog?id=123&action=izmeniProfil
-\end{lstlisting}
-
-Pretpostavimo da ne možemo mi direktno da izbrišemo nalog sa sajta banke (nemamo vidljivo dugme za tu funkcionalnost, već moramo da šaljemo zahtev adminu da to uradi), možemo da pretpostavimo (nagađamo) da i ostale akcije imaju slične nazive (npr. \say{action=obrisiProfil}) i da im na taj način neovrašćeno pristupimo.\\
+\texttt{http://banka.com/nalog?id=123\&{}action=izmeniProfil}\\
+Pretpostavimo da ne možemo mi direktno da izbrišemo nalog sa sajta banke (nemamo vidljivo dugme za tu funkcionalnost, već moramo da šaljemo zahtev adminu da to uradi), možemo da pretpostavimo (nagađamo) da i ostale akcije imaju slične nazive (npr. \say{action=obrisiProfil}) i da im na taj način neovlašćeno pristupimo.\\
 \end{primer}
 U primerima \ref{primer3} i \ref{primer4} možemo videti dva načina zloupotrebe kontrole pristupa. Njihova primena se može kombinovati za složenije napade.
 
-\subsubsection{Kontrola pristupa-prevencija}
+\subsubsection{Kontrola pristupa - prevencija}
 
-Ključna stvar jeste da se provere pristupa (autorizacija) rade na serveru (izbegavati \say{Bezbednost prema vidljivosti}(eng.~{\em Security through obsc-urity}\cite{AS})). 
+Ključna stvar jeste da se provere pristupa (autorizacija) rade na serveru (izbegavati \say{Bezbednost prema vidljivosti}(eng.~{\em Security through obsc-urity} \cite{AS})). 
 
 Naivni pristup bi bio i da se ta provera dešava pri svakoj akciji koju korisnik želi da izvrši (potvrda korisničkog imena i lozinke za tu akciju i na osnovu toga provera da li korisnik ima prava za tu akciju).
 
@@ -357,7 +365,7 @@ Ove mere ne garantuju, ali u velikoj meri doprinose povećanju bezbednosti veb s
 
 \textbf{Nadgledanje servera} podrazumeva praćenje izveštaja, kako sistemskih tako i aplikativnih. Na taj način je moguće blagovremeno uočiti neobična ponašanja aplikacija i sprečiti eventualnu zloupotrebu nedostataka, ali i uočiti pokušaje napada.
 
-\textbf{Odvajanje aplikacija i skriptova} od operativnog sistema i drugih sistemskih podataka je vrlo poželjno. Naime, hakeri koji dođu do pristupa korenom direktorijumu često mogu vrlo jednostavno doći i do dovoljno visokih privilegija da slobodno koriste sve funkcije operativnog sistema. Ovim ograničavamo problem nedovoljne bezbednosti aplikacije da ne utiče na druge aplikacije smeštene na tom serveru.
+\textbf{Odvajanje aplikacija i skriptova} od operativnog sistema i drugih sistemskih podataka je vrlo poželjno. Naime, hakeri koji dođu do pristupa korenom direktorijumu često mogu vrlo jednostavno doći i do dovoljno visokih privilegija da slobodno koriste sve funkcije operativnog sistema. Ovim ograničavamo problem nedovoljne bezbednosti aplikacije tako da ne utiče na druge aplikacije smeštene na tom serveru.
 
 \textbf{Razdvajanje razvojnog i javnog okruženja} pruža dodatnu bezbednost ukoliko razvojno okruženje nije javno dostupno. Veb aplikacije u fazi razvoja često imaju mnogo bezbednosnih nedostataka i ukoliko ti nedostaci postanu javni narušava se bezbednost celokupnog servera. Pogotovu ukoliko aplikacija koja se testira radi sa svim privilegijama, što je česta praksa.
 
